--- a/practice.html
+++ b/practice.html
@@ -14,7 +14,7 @@
 </head>
 
 <body onload="loadPractice()">
-  <div id="textarea"></div>
+  <div id="textarea" style="white-space: pre-line;"></div>
 
 </body>
 </html>
